fix filetree scrollbar

--- a/src/assets/styles/components/_web-ide.scss
+++ b/src/assets/styles/components/_web-ide.scss
@@ -364,16 +364,10 @@
 
   }
 
-
-
   // top-level element (left-side)
   .file-browser-outer-container {
+
     height: 100%;
-    overflow-y: auto;
-  }
-
-  .file-browser-inner-container {
-
     padding: 20px;
 
     .file-menu {
